tests/purs/failing/2109-negate.purs
-- @shouldFailWith UnknownName
module Main where

x = -5
